added the dinosaur gif